Update global.css (Overflow fix)

--- a/bodydough-app/src/app/globals.css
+++ b/bodydough-app/src/app/globals.css
@@ -26,4 +26,6 @@ body {
     rgb(var(--background-start-rgb));*/
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
